fix: active nav on tablets, centering for auth forms

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -139,7 +139,7 @@
 	}
 
 	.navbar-menu-link.active::before {
-		@apply content-[''] size-24 lg:size-4 absolute top-1/2 lg:top-unset -left-[45px] lg:left-1/2 lg:-bottom-10 -translate-y-1/2 lg:translate-y-0 lg:-translate-x-1/2 rounded-full bg-primary-300 lg:bg-neutral-10;
+		@apply content-[''] size-24 xl:size-4 absolute top-1/2 xl:top-unset -left-[45px] xl:left-1/2 xl:-bottom-10 -translate-y-1/2 xl:translate-y-0 xl:-translate-x-1/2 rounded-full bg-primary-300 xl:bg-neutral-10;
 	}
 
 	.navbar-mobile-menu-button {
